--- a/deployment/pages-service.yaml
+++ b/deployment/pages-service.yaml
@@ -3,6 +3,7 @@ kind: Service
 metadata:
   labels:
     app: pages
+    tier: service
   name: pages
   namespace: edgware
 spec:
@@ -13,4 +14,5 @@ spec:
       targetPort: 8080
   selector:
     app: pages
+    tier: service
   type: NodePort
